Added property support for the landlord (add, edit, delete). Includes dependency updates